# simplebus2-intercom

./: .gitignore  README.md
buzzer/: Cargo.toml  README.md  attiny13.json  rust-toolchain.toml
buzzer/.cargo/: config.toml
buzzer/pcb/: buzzer-B_Cu.gbr  buzzer-B_Mask.gbr  buzzer-B_Paste.gbr  buzzer-B_Silkscreen.gbr  buzzer-Edge_Cuts.gbr  buzzer-F_Cu.gbr  buzzer-F_Mask.gbr  buzzer-F_Paste.gbr  buzzer-F_Silkscreen.gbr  buzzer-NPTH.drl  buzzer-PTH.drl  buzzer-job.gbrjob  buzzer.kicad_pcb  buzzer.kicad_prl  buzzer.kicad_pro  buzzer.kicad_sch  buzzer_b.kicad_pcb  buzzer_b.kicad_prl  buzzer_b.kicad_pro  fp-info-cache
buzzer/src/: main.rs
remote_unit/: platformio.ini
remote_unit/src/: main.cpp
remote_unit_v2/: Cargo.toml  README.md  rustfmt.toml
remote_unit_v2/.cargo/: config.toml
remote_unit_v2/async-button/: Cargo.toml  README.md  rust-toolchain.toml
remote_unit_v2/async-button/.github/workflows/: ci.yaml
remote_unit_v2/async-button/src/: config.rs  lib.rs  tests.rs
remote_unit_v2/async-button/tests/: events.rs
remote_unit_v2/cyw43-firmware/: README.md
remote_unit_v2/pcb/: #auto_saved_files#  _autosave-remote_unit_v2.kicad_sch  fp-info-cache  remote_unit_v2.kicad_pcb  remote_unit_v2.kicad_prl  remote_unit_v2.kicad_pro  remote_unit_v2.kicad_sch  ~remote_unit_v2.kicad_sch.lck
remote_unit_v2/src/: main.rs  network.rs
repeater/: simplebus2-repeater.asm  simplebus2-repeater.sch
repeater/pcb/: simplebus2-repeater.kicad_prl  simplebus2-repeater.kicad_pro  simplebus2-repeater.kicad_sch
repeater_v2/: Cargo.toml  README.md  rust-toolchain.toml
repeater_v2/.cargo/: config.toml
repeater_v2/pcb/: fp-info-cache  repeater_v2.kicad_pcb  repeater_v2.kicad_prl  repeater_v2.kicad_pro  repeater_v2.kicad_sch  repeater_v2.kicad_sch-bak
repeater_v2/pcb/fab/: repeater_v2-B_Cu.gbl  repeater_v2-B_Mask.gbs  repeater_v2-B_Paste.gbp  repeater_v2-B_Silkscreen.gbo  repeater_v2-Edge_Cuts.gm1  repeater_v2-F_Cu.gtl  repeater_v2-F_Mask.gts  repeater_v2-F_Paste.gtp  repeater_v2-F_Silkscreen.gto  repeater_v2-NPTH.drl  repeater_v2-PTH.drl
repeater_v2/src/: main.rs
