[package]
name = "buzzer"
version = "0.1.0"
authors = ["Victor M. Alvarez <plusvic@gmail.com>"]
edition = '2018'

[dependencies]
panic-halt = "0.2.0"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["attiny85", "rt"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"