[package]
edition = "2021"
name = "remote_unit"
version = "0.1.0"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

cyw43 =  { git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75"}
cyw43-pio =  { git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75"}

embedded-io-async = "0.6.1"

embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75", features = [
    "defmt"
]}

embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
]}

embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75", features = [
    "defmt"
]}

embassy-net = {git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "dhcpv4-hostname",
    "medium-ethernet",
    "dns"
]}

embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040"
]}

embassy-time = { git = "https://github.com/embassy-rs/embassy", rev="ce4aabafa09a28382e7e2db2120d7d645916ac75", features = [
    "defmt", "defmt-timestamp-uptime"
]}

async-button= { path = "async-button"}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.1.0"
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
rand_core = "0.6.4"
rgb = "0.8.50"
rust-mqtt = { version = "0.3.0", default-features = false, features = ["no_std", "defmt"]}

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
